--- a/index.html
+++ b/index.html
@@ -1,48 +1,86 @@
-<!doctype html>
+ <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>A Night In</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="./assets/css/style.css" />
-</head>
+  </head>
 
-<body>
-    <div class="bg-dark text-secondary px-4 py-5 text-center start" style="height:100vw;">
-        <div class="py-5" style="margin-top: 10vw;">
-            <h1 class="display-5 fw-bold text-white">A Night In</h1>
-            <div class="col-lg-6 mx-auto">
-                <p class="fs-5 mb-4">Are you 21+?</p>
-                <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-                    <button type="button" class="yes btn btn-outline-light btn-lg px-4 me-sm-3">Yes</button>
-                    <button type="button" class="no btn btn-outline-light btn-lg px-4">No</button>
-                </div>
-            </div>
+  <body>
+    <div
+      class="bg-dark text-secondary px-4 py-5 text-center start"
+      style="height: 100vw"
+    >
+      <div class="py-5" style="margin-top: 10vw">
+        <h1 class="display-5 fw-bold text-white">A Night In</h1>
+        <div class="col-lg-6 mx-auto">
+          <p class="fs-5 mb-4">Are you 21+?</p>
+          <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+            <button
+              type="button"
+              class="yes btn btn-outline-light btn-lg px-4 me-sm-3"
+            >
+              Yes
+            </button>
+            <button type="button" class="no btn btn-outline-light btn-lg px-4">
+              No
+            </button>
+          </div>
         </div>
+      </div>
     </div>
 
     <div class="tasty d-flex flex-row hidden">
-        <div class="food-menu d-flex flex-column"
-            style="height: 100vw;width: 50%;background-color: white;border: solid 2px black;">
-            <h2>Menu</h2>
+      <div
+        class="food-menu d-flex flex-column"
+        style="
+          height: 100vw;
+          width: 50%;
+          background-color: white;
+          border: solid 2px black;
+        "
+      >
+        <h2>Menu</h2>
+        <h3 class="custom-h3">Dinner:</h3>
+        <form id="dinner-search" class="form w-25 d-grid gap-3">
+        
+          <!-- Search Input Field -->
+          <input
+            id="dinner-input"
+            class="form-input w-100 p-2 rounded border border-2"
+            type="text"
+            placeholder="Search"
+          />
+          <!-- Search Button -->
+          <button class="dinner-btn btn-info btn-block">Search</button>
+        </form>
+      </div>
 
-        </div>
-
-        <div class="drink menu d-flex flex-column"
-            style="height: 100vw;width: 50%;background-color: white;border: solid 2px black;">
-            <h2>Beverage</h2>
-        </div>
+      <div
+        class="drink menu d-flex flex-column"
+        style="
+          height: 100vw;
+          width: 50%;
+          background-color: white;
+          border: solid 2px black;
+        "
+      >
+        <h2>Beverage</h2>
+      </div>
     </div>
 
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-        crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+      crossorigin="anonymous"
+    ></script>
     <script src="assets/js/script.js"></script>
-</body>
-
+  </body>
 </html>
