stringed out the ingredients from API

--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
           <!-- Search Button -->
           <button class="dinner-btn btn-info btn-block">Search</button>
         </form>
+        <div class="col-10 col-md-2 col-lg-2 card bg-secondary">
+
+        </div>
       </div>
 
       <div
@@ -81,6 +84,6 @@
       integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
       crossorigin="anonymous"
     ></script>
-    <script src="assets/js/script.js"></script>
+    <script src="./assets/js/script.js"></script>
   </body>
 </html>
