--- a/index.html
+++ b/index.html
@@ -34,10 +34,33 @@
         <div class="drink menu d-flex flex-column"
             style="height: 100vw;width: 50%;background-color: white;border: solid 2px black;">
             <h2>Beverage</h2>
+            <form id="cocktail-search" class="form w-25 d-grid gap-3">
+                <h3 class="custom-h3">Cocktail: </h3>
+                <!-- Search Input Field -->
+                <input id="cocktail-input" class="form-input w-100 p-2 rounded border border-2" type="text"
+                    placeholder="Search">
+                <!-- Search Button -->
+                <button class="cocktail-btn btn-info btn-block">Search</button>
+
+                <!-- use bullet list items -->
+
+                <div>
+                    <h4 class="cocktail-name"></h4>
+                    <div>
+                        <h5 class='ingr-title'>Ingredients:</h5>
+                        <ol class="ingredients">
+
+                        </ol>
+                    </div>
+
+                    <ol class="instructions">
+
+                    </ol>
+                </div>
         </div>
+
     </div>
-
-
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
