displayed the information on the page for dinner

--- a/index.html
+++ b/index.html
@@ -39,7 +39,29 @@
                     <!-- Search Button -->
                     <button class="dinner-btn btn-info btn-block">Search</button>
                 </form>
+                <div class='ms-1'>
+                  <h4 class="dinner-name"></h4>
+                  <div>
 
+                      <ol class="dinner-ingredients">
+
+                      </ol>
+                  </div>
+                  <div>
+                      <h5 class>Instructions</h5>
+                      <ol class="dinner-instructions">
+
+                      </ol>
+                  </div>
+
+                  <div class="favorites mt-5">
+                      <ol class="favorites-list">
+
+                      </ol>
+                      <button type="button" class="favorite-btn btn btn-secondary btn-sm">I love this
+                          combo!</button>
+                  </div>
+              </div>
             </div>
 
 
@@ -55,7 +77,7 @@
                         placeholder="Search">
                     <!-- Search Button -->
                     <button class="ms-1 cocktail-btn btn-info btn-block">Search</button>
-
+                </form>
                     <!-- use bullet list items -->
 
                     <div class='ms-1'>
