Added favorite combo list event listener functionality, changed structure to use objects reather than arrays

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </header>
         <div class="tasty d-flex flex-row justify-content-between mx-4 mb-4 hidden">
             <div class="food-menu d-flex flex-column"
-                style="height: 100vh;width: 49%;background-color: white;border: solid 2px black;">
+                style="width: 49%;background-color: white;border: solid 2px black;">
                 <h2 class='text-center'>M A I N</h2>
                 <h3 class="custom-h3">Dinner:</h3>
                 <form id="dinner-search" class="form w-25 d-grid gap-3">
@@ -59,8 +59,7 @@
 
 
 
-            <div class="d-flex flex-column"
-                style="height: 100vh;width: 49%;background-color: white;border: solid 2px black;">
+            <div class="d-flex flex-column" style="width: 49%;background-color: white;border: solid 2px black;">
                 <h2 class='ms-1 drink-title text-center'>D R I N K</h2>
                 <form id="cocktail-search" class="form w-25 ms-1 mt-5 d-grid gap-3">
                     <h3 class="custom-h3">What alcohol would you like?: </h3>
@@ -88,9 +87,9 @@
                     </div>
 
                     <div class="favorites mt-5">
-                        <ol class="favorites-list">
+                        <ul class="favorites-list">
 
-                        </ol>
+                        </ul>
                         <button type="button" class="favorite-btn btn btn-secondary btn-sm">I love this
                             combo!</button>
                     </div>
