--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
             </div>
         </div>
     </div>
-    <div class='d-flex flex-column bg-light hidden'>
+    <div class='tasty flex-column bg-light hidden'>
         <header class="mb-3">
             <h1 class="mt-2 menu-title">M E N U</h1>
         </header>
-        <div class="tasty d-flex flex-row justify-content-between mx-4 mb-4 hidden">
+        <div class="d-flex flex-row justify-content-between mx-4 mb-4">
             <div class="food-menu d-flex flex-column"
                 style="width: 49%;background-color: white;border: solid 2px black;">
                 <h2 class='ms-1 text-center mb-2'>M A I N</h2>
