--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                 </form>
                 <div class='ms-1 main'>
                     <h4 class="dinner-name text-center"></h4>
+                    <div id = "recipe-image" style="align-items:center;"></div>
                     <div>
                         <h5 class="dinner-ingredients-header"></h5>
                         <ol class="dinner-ingredients">
@@ -54,8 +55,8 @@
                     </div>
                 </div>
             </div>
-            <div class="d-flex flex-column" style="width: 49%;background-color: white;">
-                <div class="d-flex flex-column" style="border: solid 2px black;">
+            <div class="d-flex flex-column" style="width: 49%;">
+                <div class="d-flex flex-column" style="border: solid 2px black; background-color: white;">
                     <h2 class='ms-1 text-center mb-2'>D R I N K</h2>
                     <h4 class='ms-1'>What do you want in your drink?</h4>
                     <form id="cocktail-search" class="form w-25 ms-1 d-grid gap-3">
@@ -79,7 +80,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="favorites mt-3" style="border: solid 2px black;">
+                <div class="favorites mt-3" style="border: solid 2px black; background-color: white;">
                     <h4 class="text-center mb-2">F A V O R I T E S</h4>
                     <ul class="favorites-list text-center d-flex flex-column align-items-center">
                     </ul>
