Fixed ingredients not clearing previous recipe

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </form>
                 <div class='ms-1 main'>
                     <h4 class="dinner-name text-center"></h4>
-                    <div id = "recipe-image" style="align-items:center;"></div>
+                    <div id="recipe-image" style="align-items:center;"></div>
                     <div>
                         <h5 class="dinner-ingredients-header"></h5>
                         <ol class="dinner-ingredients">
@@ -68,6 +68,7 @@
                     </form>
                     <div class='ms-1 drink'>
                         <h4 class="cocktail-name text-center"></h4>
+                        <div id="drink-image" style="align-items:center;"></div>
                         <div>
                             <h5 class="drink-ingredients-header"></h5>
                             <ol class="ingredients">
