--- a/index.html
+++ b/index.html
@@ -7,33 +7,44 @@
     <title>A Night In</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cantarell&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
 
 <body>
+    <!-- Start Page -->
     <div class="bg-dark text-secondary px-4 py-5 text-center start" style="height:100vh;">
-        <div class="py-5" style="margin-top: 20vh;">
+        <div class="py-5 d-flex flex-column align-items-center" style="margin-top: 20vh;">
             <h1 class="display-5 fw-bold text-white">A Night In</h1>
+            <p class="text-center text-white w-50">Tired of the same boring meals? This application will help you
+                concoct a dinner you
+                will never forget! Input your desired dish and any alcohol/cocktail ingredient to generate a list of
+                ingredients and instructions for a tasty, home-cooked meal.</p>
             <div class="col-lg-6 mx-auto">
-                <p class="fs-5 mb-4">Are you 21+?</p>
+                <p class="fs-5 mb-4 text-white">Are you 21+?</p>
                 <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
                     <button type="button" class="yes btn btn-outline-light btn-lg px-4 me-sm-3">Yes</button>
-                    <button type="button" class="no btn btn-outline-light btn-lg px-4">No</button>
                 </div>
             </div>
         </div>
     </div>
-    <div class='tasty flex-column bg-light hidden' style="height:100vh">
-        <header class="mb-3">
+    <!-- Menu Page -->
+    <div class='tasty flex-column bg-light hidden'>
+        <!-- Menu Header -->
+        <header class="mb-2">
             <h1 class="mt-2 menu-title">M E N U</h1>
         </header>
+        <!-- Flex Row Containing Menu Containers/Divs -->
         <div class="d-flex flex-row bg-light justify-content-between mx-4 mb-4 media-wrap">
+            <!-- Main Dish Recipe -->
             <div class="food-menu d-flex flex-column col-sm-12 resize"
                 style="background-color: white;border: solid 2px black;">
-                <h2 class='ms-1 text-center mb-2'>M A I N</h2>
+                <h2 class='ms-1 text-center mb-3 mt-3'>M A I N</h2>
                 <h4 class='ms-1'>What kind of dish are you craving?</h4>
                 <form id="dinner-search" class="form w-25 ms-1 d-grid gap-3">
-                    <!-- Search Input Field -->
+                    <!-- Main Dish Search Input Field -->
                     <input id="dinner-input" class="form-input w-100 p-2 rounded border border-2" type="text"
                         placeholder="Search" />
                     <!-- Search Button -->
@@ -41,26 +52,29 @@
                 </form>
                 <div class='ms-1 main'>
                     <h4 class="dinner-name text-center"></h4>
+                    <!-- Recipe Image -->
                     <div id="recipe-image" class="d-flex justify-content-center"></div>
+                    <!-- Recipe Ingredients -->
                     <div>
                         <h5 class="dinner-ingredients-header"></h5>
                         <ol class="dinner-ingredients">
                         </ol>
                     </div>
+                    <!-- Recipe Instructions -->
                     <div>
-                        <!-- <h5 class>Instructions</h5> -->
                         <h5 class="dinner-instructions-header"></h5>
                         <ol class="dinner-instructions">
                         </ol>
                     </div>
                 </div>
             </div>
+            <!-- Cocktail Recipe -->
             <div class="d-flex flex-column col-sm-12 resize">
                 <div class="d-flex flex-column" style="border: solid 2px black; background-color: white;">
-                    <h2 class='ms-1 text-center mb-2'>D R I N K</h2>
+                    <h2 class='ms-1 text-center mb-3 mt-3'>D R I N K</h2>
                     <h4 class='ms-1'>What do you want in your drink?</h4>
                     <form id="cocktail-search" class="form w-25 ms-1 d-grid gap-3">
-                        <!-- Search Input Field -->
+                        <!-- Alcohol/Ingredient Search Input Field -->
                         <input id="cocktail-input" class="ms-1 form-input w-100 p-2 rounded border border-2" type="text"
                             placeholder="Search">
                         <!-- Search Button -->
@@ -68,12 +82,15 @@
                     </form>
                     <div class='ms-1 drink'>
                         <h4 class="cocktail-name text-center"></h4>
+                        <!-- Cocktail Image -->
                         <div id="drink-image" class="d-flex justify-content-center"></div>
+                        <!-- Cocktail Ingredients -->
                         <div>
                             <h5 class="drink-ingredients-header"></h5>
                             <ol class="ingredients">
                             </ol>
                         </div>
+                        <!-- Cocktail Instructions -->
                         <div>
                             <h5 class="drink-instructions-header"></h5>
                             <ol class="instructions">
@@ -81,8 +98,9 @@
                         </div>
                     </div>
                 </div>
+                <!-- Favorite Combos -->
                 <div class="favorites mt-3" style="border: solid 2px black; background-color: white;">
-                    <h4 class="text-center mb-2">F A V O R I T E S</h4>
+                    <h2 class="text-center mb-3 mt-3">F A V O R I T E S</h2>
                     <ul class="favorites-list text-center d-flex flex-column align-items-center">
                     </ul>
                 </div>
